--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -116,7 +116,7 @@
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                android:text="@{viewModel.subtotal}"
+                android:text="@{@string/subtotal(viewModel.subtotal)}"
                 tools:text="Subtotal: $10.00"/>
 
             <!-- TODO: set the text to the current tax value from the view model -->
@@ -126,7 +126,7 @@
                 android:layout_marginTop="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/subtotal"
-                android:text="@{viewModel.tax}"
+                android:text="@{@string/tax(viewModel.tax)}"
                 tools:text="Tax: $0.73"/>
 
             <!-- TODO: set the text to the current total value from the view model -->
@@ -138,7 +138,7 @@
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tax"
-                android:text="@{viewModel.total}"
+                android:text="@{@string/total(viewModel.total)}"
                 tools:text="Total: $10.73"/>
 
             <!-- TODO: submit the order when clicked -->
